RESOLVED FIXED53730
SerializedScriptValue should not require v8 to create undefined and null values
https://bugs.webkit.org/show_bug.cgi?id=53730
Summary SerializedScriptValue should not require v8 to create undefined and null values
Jeremy Orlow
Reported 2011-02-03 16:17:36 PST
SerializedScriptValue should not require v8 to create undefined and null values
Attachments
Patch (5.17 KB, patch)
2011-02-03 16:19 PST, Jeremy Orlow
japhet: review+
jorlow: commit-queue+
Jeremy Orlow
Comment 1 2011-02-03 16:19:51 PST
Jeremy Orlow
Comment 2 2011-02-03 16:20:17 PST
please review?
Jeremy Orlow
Comment 3 2011-02-03 16:37:29 PST
WebKit Review Bot
Comment 4 2011-02-04 02:40:34 PST
http://trac.webkit.org/changeset/77558 might have broken GTK Linux 32-bit Release and GTK Linux 32-bit Debug The following tests are not passing: fast/events/pagehide-timeout.html
Note You need to log in before you can comment on or make changes to this bug.